Added new scenarios, including sending custom objects AND sending a custom object and receiving a custom object back!

--- a/NetCommTst.Client/NetCommTst.Client.csproj
+++ b/NetCommTst.Client/NetCommTst.Client.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NetCommTst.Common\NetCommTst.Common.csproj">
+      <Project>{5f16cbdf-aaa2-4255-85a6-33ffe11c4dcb}</Project>
+      <Name>NetCommTst.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
