--- a/NetCommTst.Common/NetCommTst.Common.csproj
+++ b/NetCommTst.Common/NetCommTst.Common.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{147B5DFD-49C4-4AC4-A64E-8AE80A93CEAD}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{5F16CBDF-AAA2-4255-85A6-33FFE11C4DCB}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NetCommTst.Server</RootNamespace>
-    <AssemblyName>NetCommTst.Server</AssemblyName>
+    <RootNamespace>NetCommTst.Common</RootNamespace>
+    <AssemblyName>NetCommTst.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NetworkCommsDotNet">
-      <HintPath>..\..\..\DemosAndTrials\NetworkComms\Platforms\Net40\NetworkCommsDotNet\bin\Debug\NetworkCommsDotNet.dll</HintPath>
+    <Reference Include="protobuf-net">
+      <HintPath>..\..\..\DemosAndTrials\NetworkComms\DLL\Net40\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,17 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Server.cs" />
+    <Compile Include="Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\NetCommTst.Common\NetCommTst.Common.csproj">
-      <Project>{5f16cbdf-aaa2-4255-85a6-33ffe11c4dcb}</Project>
-      <Name>NetCommTst.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
