RPC Server Program Implemented

--- a/NetCommTst.ServerRPC/NetCommTst.ServerRPC.csproj
+++ b/NetCommTst.ServerRPC/NetCommTst.ServerRPC.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5F16CBDF-AAA2-4255-85A6-33FFE11C4DCB}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{87AAD7EA-5800-4431-A23B-D2B429EA00B7}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NetCommTst.Common</RootNamespace>
-    <AssemblyName>NetCommTst.Common</AssemblyName>
+    <RootNamespace>NetCommTst.ServerRPC</RootNamespace>
+    <AssemblyName>NetCommTst.ServerRPC</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,8 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NetworkCommsDotNet">
+      <HintPath>..\..\..\DemoTrial\MarcF-networkcomms.net-d9679ccffcdb\NetworkCommsDotNet\bin\Debug\NetworkCommsDotNet.dll</HintPath>
+    </Reference>
     <Reference Include="protobuf-net">
-      <HintPath>..\..\..\DemosAndTrials\NetworkComms\DLL\Net40\protobuf-net.dll</HintPath>
+      <HintPath>..\..\..\DemoTrial\MarcF-networkcomms.net-d9679ccffcdb\NetworkCommsDotNet\bin\Debug\protobuf-net.dll</HintPath>
+    </Reference>
+    <Reference Include="RemoteProcedureCalls">
+      <HintPath>..\..\..\DemoTrial\MarcF-networkcomms.net-d9679ccffcdb\RemoteProcedureCalls\bin\Debug\RemoteProcedureCalls.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,9 +50,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMagicEightBall.cs" />
-    <Compile Include="Messages.cs" />
+    <Compile Include="MagicEightBall.cs" />
+    <Compile Include="ServerRPC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerInstance.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NetCommTst.Common\NetCommTst.Common.csproj">
+      <Project>{5f16cbdf-aaa2-4255-85a6-33ffe11c4dcb}</Project>
+      <Name>NetCommTst.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
