--- a/NetCommTst.Server/NetCommTst.Server.csproj
+++ b/NetCommTst.Server/NetCommTst.Server.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DPSBase, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\DemosAndTrials\NetworkComms\Platforms\Net40\NetworkCommsDotNet\bin\Debug\DPSBase.dll</HintPath>
+    </Reference>
     <Reference Include="NetworkCommsDotNet">
       <HintPath>..\..\..\DemosAndTrials\NetworkComms\Platforms\Net40\NetworkCommsDotNet\bin\Debug\NetworkCommsDotNet.dll</HintPath>
     </Reference>
