--- a/NetCommTst.ServerRPC/NetCommTst.ServerRPC.csproj
+++ b/NetCommTst.ServerRPC/NetCommTst.ServerRPC.csproj
@@ -32,14 +32,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DPSBase">
+      <HintPath>..\..\..\DemosAndTrials\NetworkComms\DPSBase\bin\Debug\DPSBase.dll</HintPath>
+    </Reference>
     <Reference Include="NetworkCommsDotNet">
-      <HintPath>..\..\..\DemoTrial\MarcF-networkcomms.net-d9679ccffcdb\NetworkCommsDotNet\bin\Debug\NetworkCommsDotNet.dll</HintPath>
+      <HintPath>..\..\..\DemosAndTrials\NetworkComms\Platforms\Net40\NetworkCommsDotNet\bin\Debug\NetworkCommsDotNet.dll</HintPath>
     </Reference>
     <Reference Include="protobuf-net">
-      <HintPath>..\..\..\DemoTrial\MarcF-networkcomms.net-d9679ccffcdb\NetworkCommsDotNet\bin\Debug\protobuf-net.dll</HintPath>
+      <HintPath>..\..\..\DemosAndTrials\NetworkComms\DLL\Net40\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="RemoteProcedureCalls">
-      <HintPath>..\..\..\DemoTrial\MarcF-networkcomms.net-d9679ccffcdb\RemoteProcedureCalls\bin\Debug\RemoteProcedureCalls.dll</HintPath>
+      <HintPath>..\..\..\DemosAndTrials\NetworkComms\RemoteProcedureCalls\bin\Debug\RemoteProcedureCalls.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
