--- a/NetCommTst.Common/NetCommTst.Common.csproj
+++ b/NetCommTst.Common/NetCommTst.Common.csproj
@@ -33,6 +33,9 @@
     <Reference Include="NetworkCommsDotNetComplete">
       <HintPath>..\..\..\CompiledLibraries\NetWorkComms\NetworkCommsDotNetComplete.dll</HintPath>
     </Reference>
+    <Reference Include="RemoteProcedureCalls">
+      <HintPath>..\..\..\..\Temp\networkcomms\MarcF-networkcomms.net-ff6cb62ee1c2\RemoteProcedureCalls\bin\Debug\RemoteProcedureCalls.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
